applicationDeveloper/lightning-lab-1/logger-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: logger
spec:
  containers:
    - name: nginx
      image: nginx/alpine
      volumeMounts:
        - mountPath: /var/www/nginx
          name: log
  volumes:
    - name: log
      persistentVolumeClaim:
        claimName: log-claim
