applicationDeveloper/lightning-lab-1/secure-pod.yml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: secure-pod
  name: secure-pod
spec:
  containers:
    - image: nginx
      name: secure-pod
      volumeMounts:
        - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
          name: default-token-sfps9
          readOnly: true
  tolerations:
    - effect: NoExecute
      key: node.kubernetes.io/not-ready
      operator: Exists
      tolerationSeconds: 300
    - effect: NoExecute
      key: node.kubernetes.io/unreachable
      operator: Exists
      tolerationSeconds: 300
  volumes:
    - name: default-token-sfps9
      secret:
        defaultMode: 420
        secretName: default-token-sfps9
