applicationDeveloper/lightning-lab-1/secure-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: secure-pod
  name: secure-service
spec:
  clusterIP: 10.101.111.240
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    run: secure-pod
  type: ClusterIP
